--- a/pm-guide/src/index.css
+++ b/pm-guide/src/index.css
@@ -1,13 +1,464 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#left{
+  position: absolute;
+width: 55vw;
+height: 891px;
+left: 0px;
+top: 0px;
+
+/* Primary/blue/500 */
+
+background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), #4B3C99;
+}
+#left img{
+  position :absolute;
+  left: 155px;
+  top: 135px;
+}
+#one{
+  position: absolute;
+left: 28.46%;
+right: 63.28%;
+top: 16.75%;
+bottom: 77.05%;
+
+/* green */
+
+/* background: #87C405; */
+}
+#two{
+  position: absolute;
+left: 0.85%;
+right: 77.4%;
+top: 10.61%;
+bottom: 152.3%;
+
+/* background: #F1EFFC;
+transform: rotate(-106deg); */
+}
+#three{
+  position: absolute;
+left: 2.47%;
+right: 70.17%;
+top: 12.4%;
+bottom: 71.54%;
+
+/* background: #4B3C99; */
+}
+#four{
+  position: absolute;
+left: 6.32%;
+right: 79.94%;
+top: 17.04%;
+bottom: 75.58%;
+
+/* background: #FFFFFF; */
+}
+#p1{
+  position: absolute;
+width: 619px;
+height: 140px;
+left: 165px;
+top: 325px;
+
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+font-style: normal;
+font-weight: 586;
+font-size: 41px;
+line-height: 50px;
+
+color: #FFFFFF;
+
+}
+#p2{
+position: absolute;
+width: 472px;
+height: 112px;
+left: 165px;
+top: 500px;
+
+/* text / medium / 16 pt. */
+
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 160%;
+/* or 26px */
+
+display: flex;
+align-items: center;
+letter-spacing: 0.01em;
+
+/* grey / shade 05 */
+
+color: #E0E0E0;
+}
+#p3{
+  position: absolute;
+width: 411px;
+height: 28px;
+left: 1339px;
+top: 125px;
+
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 28px;
+/* identical to box height, or 156% */
+
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #8692A6;
+}
+#p4{
+  position: absolute;
+width: 126px;
+height: 19px;
+left: 1284px;
+top: 293px;
+
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+display: flex;
+align-items: center;
+
+color: #696F79;
+}
+#p5{
+  position: absolute;
+width: 120px;
+height: 19px;
+left: 1284px;
+top: 440px;
+
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+display: flex;
+align-items: center;
+
+color: #696F79;
+}
+#rtp1{
+  position: absolute;
+width: 322px;
+height: 51px;
+left: 1335px;
+top: 25px;
+
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+font-style: normal;
+font-weight: bold;
+font-size: 42px;
+line-height: 51px;
+/* identical to box height */
+
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #000000;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#guide{
+  color:#87C405;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
+*{
+background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), #4B3C99;
+}
+input,button {
+  appearance:none;
+  background: none;
+  border: none;
+  outline: none;
+}
+
+.App {
+  height: 100vh;
+  display: flex;
+  align-items: left;
+  justify-content:left;
+  background-color: #f1f3f7;
+}
+*/
+#email{
+  position: absolute;
+width: 426px;
+height: 64px;
+left: 1279px;
+top: 339px;
+
+border: 1px solid #8692A6;
+box-sizing: border-box;
+border-radius: 6px;
+}
+#password{
+  position: absolute;
+width: 426px;
+height: 64px;
+left: 1279px;
+top: 489px;
+
+border: 1px solid #8692A6;
+box-sizing: border-box;
+border-radius: 6px;
+}
+#butt{
+  position: absolute;
+width: 426px;
+height: 64px;
+left: 1279px;
+top: 656px;
+
+/* green */
+
+background: #87C405;
+border-radius: 6px;
+}
+#rig{
+  position: absolute;
+left:1279px;;
+top: 580px;
+
+/*background: #87C405;*/
+}
+#rem{
+  position: absolute;
+width: 111px;
+height: 19px;
+left: 1310px;
+top: 565px;
+
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+display: flex;
+align-items: center;
+
+color: #696F79;
+}
+#forget{
+  position: absolute;
+width: 196px;
+height: 24px;
+left: 1540px;
+top: 561px;
+
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+/* identical to box height */
+
+display: flex;
+align-items: center;
+text-decoration-line: underline;
+
+/* green */
+
+color: #87C405;
+}
+#cont{
+  position: absolute;
+width: 249px;
+height: 19px;
+left: 1370px;
+top: 738px;
+
+font-family: Inter;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+display: flex;
+align-items: center;
+
+color: #696F79;
+}
+.diff{
+  color:#87C405;
+}
+/* form:after {
+  content: '';
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  right: -20px;
+  bottom: -20px;
+  z-index: 1;
+  background-image: linear-gradient(to bottom right, #FFCE00, #FE4880);
+}
+form .form-inner {
+  position:relative;
+  display: block;
+  background-color: #FFF;
+  padding: 200px;
+  z-index: 2;
+}
+
+form .form-inner h2{
+  color: #888;
+  font-size:28px;
+  font-weight:500;
+  margin-bottom: 30px;
+}
+form .form-inner .form-group {
+  display:block;
+  width: 300px;
+  margin-bottom: 15px;
+}
+
+.form-inner .form-group label{
+  display: block;
+  color: #666;
+  font-size:12px;
+  margin-bottom:5px;
+  transition:0.4s;
+}
+.form-inner .form-group:focus-within label{
+  color: #FE4880;
+}
+
+form .form-inner .form-group input{
+  display:block;
+  width: 100%;
+  padding: 10px 15px;
+  background-color:#F8F8F8;
+  border-radius: 8px;
+  transition: 0.4s;
+}
+
+form .form-inner .form-group input:focus{
+  box-shadow: 0px 0px 3px rgba(0,0,0,0.2);
+}*/
+#butt input[type="submit"]{
+  display:inline-block;
+  padding:10px 15px;
+  border-radius: 8px;
+  background-image: linear-gradient(to right, #FFCE00 50%, #FFCE00 50%, #FE4880);
+  background-size:200%;
+  background-position:0%;
+  transition: 0.4s;
+  font-weight: 700;
+  cursor: pointer;
+}
+#butt input[type="submit"]:hover{
+  background-position: 100% 0%;
+}
+#button{
+  position: absolute;
+  left: 1467px;
+  top:662px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color:#FFFFFF;
+}
+#boxed1{
+  position: absolute;
+width: 65px;
+height: 65px;
+left: 1282px;
+top: 203px;
+
+background: #FFFFFF;
+box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.08);
+border-radius: 6px;
+}
+#boxed2{
+  position: absolute;
+width: 65px;
+height: 65px;
+left: 1403px;
+top: 203px;
+
+background: #FFFFFF;
+box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.08);
+border-radius: 6px;
+}
+#boxed3{
+  position: absolute;
+width: 65px;
+height: 65px;
+left: 1523px;
+top: 203px;
+
+background: #FFFFFF;
+box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.08);
+border-radius: 6px;
+}
+#boxed4{
+  position: absolute;
+width: 65px;
+height: 65px;
+left: 1637px;
+top: 203px;
+
+background: #FFFFFF;
+box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.08);
+border-radius: 6px;
+}
+#box1{
+
+position: absolute;
+left: 20%;
+right: 0%;
+top: 10%;
+bottom: 0.06%;
+
+}
+#box2{
+
+position: absolute;
+left: 25%;
+right: 0%;
+top: 20%;
+bottom: 0.06%;
+
+}
+#box3{
+
+position: absolute;
+left: 25%;
+right: 0%;
+top: 20%;
+bottom: 0.06%;
+
+}
+#box4{
+
+position: absolute;
+left: 25%;
+right: 0%;
+top: 20%;
+bottom: 0.06%;
+
 }
